force-app/main/default/objects/Lead_Act_Snapshot__c/Lead_Act_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Lead Act Snapshot</label>
    <nameField>
        <displayFormat>LAS-{00000000}</displayFormat>
        <label>Lead Act Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Act Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>