force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Classifier_Version__c.field-meta.xml
<CustomField>
    <fullName>Classifier_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Lead Classifier version that produced this decision.</description>
    <label>Classifier Version</label>
    <referenceTo>Lead_Classifier_Model_Version__c</referenceTo>
    <relationshipLabel>Act Snapshots With This Version</relationshipLabel>
    <relationshipName>Act_Snapshots_With_This_Version</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>