force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>Calibrated confidence on the top outcome.</description>
    <label>Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>