force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <description>When Lumen produced this Act decision.</description>
    <label>Created At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>