force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Decision_Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Decision_Policy_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Decision Policy version applied to convert probability to outcome.</description>
    <label>Decision Policy Version</label>
    <referenceTo>Lead_Classifier_Decision_Policy_Version__c</referenceTo>
    <relationshipLabel>Act Snapshots Under This Policy</relationshipLabel>
    <relationshipName>Act_Snapshots_Under_This_Policy</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>