force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <description>SHA-256 hash of the payload.</description>
    <label>Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>