force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Landed_At__c.field-meta.xml
<CustomField>
    <fullName>Landed_At__c</fullName>
    <description>When the downstream Lead update landed successfully.</description>
    <label>Landed At</label>
    <type>DateTime</type>
</CustomField>