force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Landing_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Landing_Failure_Reason__c</fullName>
    <description>Reason the downstream update did not land, if applicable.</description>
    <label>Landing Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>