force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Landing_Status__c.field-meta.xml
<CustomField>
    <fullName>Landing_Status__c</fullName>
    <description>Whether the downstream Lead update landed and, if not, why.</description>
    <label>Landing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>awaiting_application</fullName>
                <label>Awaiting Application</label>
            </value>
            <value>
                <fullName>landed</fullName>
                <label>Landed</label>
            </value>
            <value>
                <fullName>validation_rule_rejected</fullName>
                <label>Validation Rule Rejected</label>
            </value>
            <value>
                <fullName>integration_failed</fullName>
                <label>Integration Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>