force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Ms__c</fullName>
    <description>Act API latency in milliseconds.</description>
    <label>Latency (ms)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>