force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead</relationshipLabel>
    <relationshipName>ActSnap_Lead_Records</relationshipName>
    <type>Lookup</type>
</CustomField>