force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Manual_Review_Flag__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the Classifier pivoted to manual review.</description>
    <label>Manual Review Flag</label>
    <type>Checkbox</type>
</CustomField>