force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Manual_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Reason__c</fullName>
    <description>Reason for manual review pivot, if applicable.</description>
    <label>Manual Review Reason</label>
    <length>120</length>
    <type>Text</type>
</CustomField>