force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Margin_To_Second__c.field-meta.xml
<CustomField>
    <fullName>Margin_To_Second__c</fullName>
    <description>Margin between top outcome and second-place outcome.</description>
    <label>Margin to Second</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>