force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>The classification produced.</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pursue</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Soft_Decline</fullName>
                <label>Soft Decline</label>
            </value>
            <value>
                <fullName>Hard_Disqualify</fullName>
                <label>Hard Disqualify</label>
            </value>
            <value>
                <fullName>Manual_Review</fullName>
                <label>Manual Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>