force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Outcome_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Confidence__c</fullName>
    <description>Classifier confidence in verdict (0.000-1.000).</description>
    <label>Outcome Confidence</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>