force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Predicted_Window__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Window__c</fullName>
    <label>Predicted Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Indefinite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>