force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Prior_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Prior_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup to a prior Act Snapshot (chain for failed-then-retry).</description>
    <label>Prior Act Snapshot</label>
    <referenceTo>Lead_Act_Snapshot__c</referenceTo>
    <relationshipLabel>Subsequent Act Snapshots</relationshipLabel>
    <relationshipName>Subsequent_Act_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>