force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Read_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Read_Snapshot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Read Snapshot this Act decision was based on.</description>
    <label>Read Snapshot</label>
    <referenceTo>Lead_Read_Snapshot__c</referenceTo>
    <relationshipLabel>Act Snapshots</relationshipLabel>
    <relationshipName>Act_Snapshots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>