force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>Correlation ID.</description>
    <label>Request ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>