force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Snapshot_Id__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Id__c</fullName>
    <description>External ID for upsert + cross-CSV linkage from Observe Snapshot and Override.</description>
    <externalId>true</externalId>
    <label>Snapshot Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>