force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Top_Features__c.field-meta.xml
<CustomField>
    <fullName>Top_Features__c</fullName>
    <description>JSON: top contributing features to this decision.</description>
    <label>Top Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>