force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Verdict__c.field-meta.xml
<CustomField>
    <fullName>Verdict__c</fullName>
    <description>Loop 1 classifier verdict at decision time.</description>
    <label>Verdict</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pursue</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Soft_Decline</fullName>
                <label>Soft Decline</label>
            </value>
            <value>
                <fullName>Hard_Disqualify</fullName>
                <label>Hard Disqualify</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>