force-app/main/default/objects/Lead_Act_Snapshot__c/fields/Window_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Window_Confidence__c</fullName>
    <label>Window Confidence</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>